Backdrop-filter issue on iOS.

--- a/style.css
+++ b/style.css
@@ -485,7 +485,7 @@ main {
     animation: gradientAnimation 7s ease-in-out infinite alternate;
 
     pointer-events: none;
-    transform: translateZ(1px);
+    /* transform: translateZ(1px); */
 }
 
     @keyframes gradientAnimation {
